Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23957

QAxWidget: When changeEvent() is called and a container has not been set up then it will cause a crash as it will unconditionally try to use the container

XMLWordPrintable

    • c36006f45fdcbdb97cbc3179c4ecc25203898fc5

      QAxWidget: When changeEvent() is called and a container has not been set up then it will cause a crash as it will unconditionally try to use the container

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes