Fix a crash when changeEvent() is called and there is no container

When changeEvent() was called and no container had been set up then it
would crash because it uses container without checking if it exists.
Task-number: QTBUG-23957

Change-Id: I67393bf5c9bc5b437b92ee2c1b72ffbd5cd12af3