src/activeqt/container/qaxwidget.cpp
@@ -2181,7 +2181,7 @@ QSize QAxWidget::minimumSizeHint() const
 */
 void QAxWidget::changeEvent(QEvent *e)
 {
-    if (isNull())
+    if (isNull() || !container)
         return;
 
     switch (e->type()) {
